--- a/src/components/Global/css/Header.css
+++ b/src/components/Global/css/Header.css
@@ -1,28 +1,34 @@
-.App {
+
+.Header {
+  background-color: #222;
+  height: 160px;
+  padding: 20px;
+  color: white;
   text-align: center;
 }
 
-.App-logo {
+.Logo img {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
 }
 
 .App-title {
   font-size: 1.5em;
 }
 
-.App-intro {
-  font-size: large;
-}
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.Menu {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.Menu li {
+  display: inline-block;
+  padding-right: 10px;
 }
