--- a/src/components/Global/css/Header.css
+++ b/src/components/Global/css/Header.css
@@ -32,3 +32,13 @@
   display: inline-block;
   padding-right: 10px;
 }
+
+.Menu li a {
+  color: #AAA;
+  text-decoration: none;
+}
+
+.Menu li a:hover {
+  color: #EEE;
+  text-decoration: none;
+}
